--- a/BattleSystem/src/main/resources/com/example/cs210battlemocks/battle-mock1v1.fxml
+++ b/BattleSystem/src/main/resources/com/example/cs210battlemocks/battle-mock1v1.fxml
@@ -11,52 +11,65 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+<BorderPane fx:controller="com.example.cs210battlemocks.Battle1v1Controller"
+            maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="600.0" prefWidth="800.0"
+            xmlns="http://javafx.com/javafx/25"
+            xmlns:fx="http://javafx.com/fxml/1">
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
-   <center>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <children>
-            <Pane layoutY="242.0" prefHeight="185.0" prefWidth="800.0" style="-fx-background-color: grey;" AnchorPane.bottomAnchor="29.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-            <Pane layoutX="590.0" layoutY="176.0" prefHeight="158.0" prefWidth="95.0" style="-fx-background-color: lightcoral;" AnchorPane.bottomAnchor="100.0" AnchorPane.rightAnchor="115.0" />
-            <Pane layoutX="85.0" layoutY="186.0" prefHeight="135.0" prefWidth="68.0" style="-fx-background-color: lightgreen;" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="85.0" />
-            <VBox layoutX="69.0" layoutY="137.0" prefHeight="55.0" prefWidth="100.0" AnchorPane.bottomAnchor="255.0" AnchorPane.leftAnchor="69.0">
-               <children>
-                  <ProgressBar prefWidth="200.0" progress="1.0" style="-fx-accent: green;" />
-                  <ProgressBar prefWidth="200.0" progress="1.0" style="-fx-accent: cyan;" />
-               </children>
-            </VBox>
-            <VBox layoutX="588.0" layoutY="137.0" prefHeight="56.0" prefWidth="100.0" AnchorPane.bottomAnchor="255.0" AnchorPane.rightAnchor="112.0">
-               <children>
-                  <ProgressBar prefWidth="200.0" progress="1.0" style="-fx-accent: red;" />
-               </children>
-            </VBox>
-         </children>
-      </AnchorPane>
-   </center>
-   <bottom>
-      <HBox prefHeight="153.0" prefWidth="761.0" BorderPane.alignment="CENTER">
-         <children>
-            <VBox prefHeight="126.0" prefWidth="132.0" spacing="10.0">
-               <padding>
-                  <Insets left="15.0" right="15.0" top="10.0" />
-               </padding>
-               <children>
-                  <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="115.0" text="Attack" />
-                  <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="104.0" text="Ability" />
-                  <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="112.0" text="Item" />
-                  <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="110.0" text="Flee" />
-               </children>
-            </VBox>
-            <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: white; -fx-padding: 10;" HBox.hgrow="ALWAYS">
-               <children>
-                  <Label text="MENU" underline="true">
-                     <font>
-                        <Font name="System Bold" size="18.0" />
-                     </font>
-                  </Label>
-               </children>
-            </VBox>
-         </children>
-      </HBox>
-   </bottom>
+    <center>
+        <AnchorPane fx:id="root" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <children>
+                <!-- Background & placeholders -->
+                <Pane layoutY="242.0" prefHeight="185.0" prefWidth="800.0" style="-fx-background-color: grey;" AnchorPane.bottomAnchor="29.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+                <Pane layoutX="590.0" layoutY="176.0" prefHeight="158.0" prefWidth="95.0" style="-fx-background-color: lightcoral;" AnchorPane.bottomAnchor="100.0" AnchorPane.rightAnchor="115.0" />
+                <Pane layoutX="85.0" layoutY="186.0" prefHeight="135.0" prefWidth="68.0" style="-fx-background-color: lightgreen;" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="85.0" />
+
+                <!-- Player HP Bars -->
+                <VBox layoutX="69.0" layoutY="137.0" prefHeight="55.0" prefWidth="100.0" AnchorPane.bottomAnchor="255.0" AnchorPane.leftAnchor="69.0">
+                    <children>
+                        <ProgressBar fx:id="playerHP1" prefWidth="200.0" progress="1.0" style="-fx-accent: green;" />
+                        <ProgressBar fx:id="playerHP2" prefWidth="200.0" progress="1.0" style="-fx-accent: cyan;" />
+                    </children>
+                </VBox>
+
+                <!-- Enemy HP Bar -->
+                <VBox layoutX="588.0" layoutY="137.0" prefHeight="56.0" prefWidth="100.0" AnchorPane.bottomAnchor="255.0" AnchorPane.rightAnchor="112.0">
+                    <children>
+                        <ProgressBar fx:id="enemyHP" prefWidth="200.0" progress="1.0" style="-fx-accent: red;" />
+                    </children>
+                </VBox>
+            </children>
+        </AnchorPane>
+    </center>
+
+    <bottom>
+        <HBox prefHeight="153.0" prefWidth="761.0" BorderPane.alignment="CENTER">
+            <children>
+                <!-- Menu Buttons -->
+                <VBox prefHeight="126.0" prefWidth="132.0" spacing="10.0">
+                    <padding>
+                        <Insets left="15.0" right="15.0" top="10.0" />
+                    </padding>
+                    <children>
+                        <Button fx:id="attackButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="115.0" text="Attack" onAction="#onAction"/>
+                        <Button fx:id="abilityButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="104.0" text="Ability" onAction="#onAction"/>
+                        <Button fx:id="itemButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="112.0" text="Item" onAction="#onAction"/>
+                        <Button fx:id="fleeButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="110.0" text="Flee" onAction="#onAction"/>
+                    </children>
+                </VBox>
+
+                <!-- Menu Label -->
+                <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: white; -fx-padding: 10;" HBox.hgrow="ALWAYS">
+                    <children>
+                        <Label fx:id="menuLabel" text="MENU" underline="true">
+                            <font>
+                                <Font name="System Bold" size="18.0" />
+                            </font>
+                        </Label>
+                    </children>
+                </VBox>
+            </children>
+        </HBox>
+    </bottom>
 </BorderPane>
