--- a/BattleSystem/src/main/resources/com/example/cs210battlemocks/battle-mock1v2.fxml
+++ b/BattleSystem/src/main/resources/com/example/cs210battlemocks/battle-mock1v2.fxml
@@ -11,57 +11,85 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cs210battlemocks.Battle1v2Controller">
-   <center>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <children>
-            <Pane layoutY="242.0" prefHeight="185.0" prefWidth="800.0" style="-fx-background-color: grey;" AnchorPane.bottomAnchor="29.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-            <Pane layoutX="668.0" layoutY="174.0" prefHeight="158.0" prefWidth="95.0" style="-fx-background-color: firebrick;" AnchorPane.bottomAnchor="115.0" AnchorPane.rightAnchor="37.0" />
-            <VBox layoutX="665.0" layoutY="118.0" prefHeight="56.0" prefWidth="100.0" AnchorPane.bottomAnchor="273.0" AnchorPane.rightAnchor="35.0">
-               <children>
-                  <ProgressBar prefWidth="200.0" progress="1.0" style="-fx-accent: red;" />
-               </children>
+<BorderPane fx:controller="com.example.praticeproject.Battle1v2Controller"
+            prefWidth="800" prefHeight="600"
+            xmlns="http://javafx.com/javafx/25"
+            xmlns:fx="http://javafx.com/fxml/1">
+
+    <!-- =================== CENTER BATTLE AREA =================== -->
+    <center>
+        <AnchorPane fx:id="root" prefWidth="800" prefHeight="400">
+            <children>
+
+                <!-- Background Panel -->
+                <Pane layoutY="242.0" prefHeight="185.0" prefWidth="800.0"
+                      style="-fx-background-color: grey;" />
+
+                <!-- =========== ENEMY 1 =========== -->
+                <Pane layoutX="539.0" layoutY="123.0" prefHeight="158.0" prefWidth="95.0"
+                      style="-fx-background-color: lightcoral;" />
+
+                <VBox layoutX="537.0" layoutY="70.0" prefHeight="56.0" prefWidth="100.0">
+                    <children>
+                        <ProgressBar fx:id="enemyHP2" prefWidth="200.0" progress="1.0"
+                                     style="-fx-accent: red;" />
+                    </children>
+                </VBox>
+
+                <!-- =========== ENEMY 2 =========== -->
+                <Pane layoutX="668.0" layoutY="174.0" prefHeight="158.0" prefWidth="95.0"
+                      style="-fx-background-color: firebrick;" />
+
+                <VBox layoutX="665.0" layoutY="118.0" prefHeight="56.0" prefWidth="100.0">
+                    <children>
+                        <ProgressBar fx:id="enemyHP1" prefWidth="200.0" progress="1.0"
+                                     style="-fx-accent: red;" />
+                    </children>
+                </VBox>
+
+                <!-- =========== PLAYER PANEL =========== -->
+                <Pane layoutX="85.0" layoutY="186.0" prefHeight="135.0" prefWidth="68.0"
+                      style="-fx-background-color: lightgreen;" />
+
+                <VBox layoutX="69.0" layoutY="137.0" prefHeight="55.0" prefWidth="100.0">
+                    <children>
+                        <ProgressBar fx:id="playerHP1" prefWidth="200.0" progress="1.0"
+                                     style="-fx-accent: green;" />
+                        <ProgressBar fx:id="playerHP2" prefWidth="200.0" progress="1.0"
+                                     style="-fx-accent: cyan;" />
+                    </children>
+                </VBox>
+
+            </children>
+        </AnchorPane>
+    </center>
+
+    <!-- =================== MENU BUTTON AREA =================== -->
+    <bottom>
+        <HBox spacing="20">
+            <padding>
+                <Insets top="10" right="10" bottom="10" left="10"/>
+            </padding>
+
+
+            <!-- Menu Buttons -->
+            <VBox spacing="10">
+                <Button fx:id="attackButton" text="Attack" onAction="#onAction"/>
+                <Button fx:id="abilityButton" text="Ability" onAction="#onAction"/>
+                <Button fx:id="itemButton" text="Item" onAction="#onAction"/>
+                <Button fx:id="fleeButton" text="Flee" onAction="#onAction"/>
             </VBox>
-            <Pane layoutX="539.0" layoutY="123.0" prefHeight="158.0" prefWidth="95.0" style="-fx-background-color: lightcoral;" AnchorPane.bottomAnchor="166.0" AnchorPane.rightAnchor="166.0" />
-            <VBox layoutX="537.0" layoutY="70.0" prefHeight="56.0" prefWidth="100.0" AnchorPane.bottomAnchor="321.0" AnchorPane.rightAnchor="163.0">
-               <children>
-                  <ProgressBar prefWidth="200.0" progress="1.0" style="-fx-accent: red;" />
-               </children>
+
+            <!-- Menu Label -->
+            <VBox spacing="10">
+                <Label fx:id="menuLabel" text="MENU" underline="true">
+                    <font>
+                        <Font name="System Bold" size="18.0"/>
+                    </font>
+                </Label>
             </VBox>
-            <Pane layoutX="85.0" layoutY="186.0" prefHeight="135.0" prefWidth="68.0" style="-fx-background-color: lightgreen;" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="85.0" />
-            <VBox layoutX="69.0" layoutY="137.0" prefHeight="55.0" prefWidth="100.0" AnchorPane.bottomAnchor="255.0" AnchorPane.leftAnchor="69.0">
-               <children>
-                  <ProgressBar prefWidth="200.0" progress="1.0" style="-fx-accent: green;" />
-                  <ProgressBar prefWidth="200.0" progress="1.0" style="-fx-accent: cyan;" />
-               </children>
-            </VBox>
-         </children>
-      </AnchorPane>
-   </center>
-   <bottom>
-      <HBox prefHeight="153.0" prefWidth="761.0" BorderPane.alignment="CENTER">
-         <children>
-            <VBox prefHeight="126.0" prefWidth="132.0" spacing="10.0">
-               <padding>
-                  <Insets left="15.0" right="15.0" top="10.0" />
-               </padding>
-               <children>
-                  <Button fx:id="AttackButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="115.0" text="Attack" />
-                  <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="104.0" text="Ability" />
-                  <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="112.0" text="Item" />
-                  <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="110.0" text="Flee" />
-               </children>
-            </VBox>
-            <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: white; -fx-padding: 10;" HBox.hgrow="ALWAYS">
-               <children>
-                  <Label text="MENU" underline="true">
-                     <font>
-                        <Font name="System Bold" size="18.0" />
-                     </font>
-                  </Label>
-               </children>
-            </VBox>
-         </children>
-      </HBox>
-   </bottom>
+
+        </HBox>
+    </bottom>
+
 </BorderPane>
